--- a/WebContent/css/com.css
+++ b/WebContent/css/com.css
@@ -79,11 +79,9 @@ button {
   box-sizing: border-box;
 }
 .w{
-  width: 1195px;
-  margin:0 auto;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  max-width: 1195px;
+  padding:0 20px;
+  margin: 0 auto;
 }
 .left {
   float: left;
