--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -59,16 +59,51 @@
 #header .nav > a:hover{
     background: #921d1d;
 }
-#header .nav .login{
-    border:1px solid #FFF;
+#header .nav > a.login{
+    border: 1px solid #FFF;
     border-radius: 6px;
-    padding: 4px 10px;
+    padding: 8px 14px;
     white-space: nowrap;
+    line-height: 1;
+    max-width: 2em;
+    margin-left: 1em;
+}
+#header .nav > a.login:hover {
+    background: #FFF;
+    color: #093368;
 }
 #header .nav .exit{
-    display: none;
+    margin-left: 1em;
+    position: relative;
 }
-
+#header .nav .exit a{
+    color: #333;
+}
+#header .nav .exit .exitTan{
+    position: absolute;
+    background: #FFF;
+    right: 0;
+    color: #333;
+    z-index: 2;
+    border:1px solid #cecece;
+}
+#header .nav .exit .exitTan .ul1{
+    padding: 16px 20px;
+    white-space: nowrap;
+}
+#header .nav .exit .exitTan .ul1 li {
+    margin-bottom: 4px;
+}
+#header .nav .exit .userName{}
+#header .nav .exit .userName .s1{font-size: 22px}
+#header .nav .exit .money b.red{font-size: 18px}
+#header .nav .exit .exitTan .btnD{
+    text-align: right;
+    background: #f8f8f8;
+    padding:10px;
+}
+#header .nav .exit .exitTan .btnD a{
+    color: #333;}
 #header .nav .shopCart:before{
     font-family: font_family;
     content: '\e60b';
@@ -179,3 +214,117 @@
 #indexProD .f_yellow,#indexProD .f_yellow a{color: #caa700;}
 #indexProD .f_pink,#indexProD .f_pink a{color: #d0515f;}
 #indexProD .f_origin,#indexProD .f_origin a{color: #df6b3a;}
+
+/*login*/
+.loginD{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#2a2a2a;
+    flex-direction: column;
+}
+.loginD .loginCont{
+    background: #FFF;
+    border-radius: 10px;
+    margin:30px auto;
+    padding: 16px 25px 30px;
+    border: 1px solid #e4e4e4;
+}
+.loginD .tit{
+    font-weight: bold;
+    font-size: 16px;
+}
+.loginD .imgD{
+    padding: 60px 90px;
+}
+.loginD .btnD .dis{
+    background: #e3e3e3;
+    text-align: center;
+    line-height: 4;
+    border-radius: 2em;
+    font-size: 14px;
+    width: 309px;
+    margin: 0 auto;
+    display: block;
+    color: #2a2a2a;
+}
+.loginD .regist{
+
+padding: 25px 40px 0;
+
+font-size: 14px;
+}
+.loginD .regist .li{
+    display: block;
+    margin-bottom: 15px;
+}
+.loginD .regist .head{
+    margin-bottom: 5px;
+    display: block;
+}
+.loginD .regist .d1{
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+}
+.loginD .regist .inp{
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+    outline: none;
+    padding: 10px;
+    flex: 1;
+}
+.loginD .regist .inp + .btnAn{
+    margin-left: 1em;
+}
+.checkboxD{}
+.checkboxD .checkbox{
+    opacity: 0;
+    position: absolute;
+}
+.checkboxD label{
+    flex:1;
+    text-align: center;
+}
+.checkboxD label + label{
+    margin-left: 1em;
+}
+.checkboxD .checkbox + span{
+    border:1px solid #e4e4e4;
+    display: block;
+    line-height: 45px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    overflow: hidden;
+    height: 47px;
+    width: 75px;
+}
+.checkboxD .checkbox:checked + span {
+    border: 2px solid #2672d0;
+    position: relative;
+}
+.checkboxD .checkbox:checked + span:after {
+    content: '';
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: -2px;
+    right: -2px;
+    background: url("/images/del.png") no-repeat;
+}
+.loginD .regist .btnAn{
+    background: #2672d0;
+    color: #FFF;
+    text-align: center;
+    padding: 0 2em;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.loginD .btnD{
+    display: flex;
+}
+.loginD .btnD .btnAn{
+    flex: 1;
+    font-size: 16px;
+    line-height: 2.5;
+}
