--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -487,6 +487,7 @@ font-size: 14px;
 #main.orderD .o_m_order .remark{
     flex: 1;
     margin-right: 10%;
+    position: relative;
 }
 #main.orderD .o_m_order .remark textarea{
     width: 100%;
@@ -497,6 +498,12 @@ font-size: 14px;
     background: #f6f6f6;
 }
 #main.orderD .o_m_order .remark .proId{font-size: 12px;color: #919191;}
+#main.orderD .o_m_order .remark .num{
+    position: absolute;
+    right: 1em;
+    z-index: 1;
+    margin-top: -4em;
+}
 #main.orderD .o_m_order .info{
     font-size: 14px;
 }
